- Fixed wxXmlResource::GetText() to convert data to current locale's
  charset in ANSI build.

wxMSW:

- Fix rare bug with messages delivered to wrong wxSocket (Tim Kosse)
- Fix setting icons when they have non-default (16*16 and 32*32) sizes
- Fixed wxLocale::GetInfo to use the C locale.
- Don't enable disabled windows when showing them (Harry McKame).

wxGTK:

- Return false from wxEventLoop::Dispatch() if gtk_main_quit() was called and
  so the loop should exit (Rodolfo Schulz de Lima)


2.8.7
-----

All:

- Fixed bug with default proxy destruction in wxURL (Axel Gembe).

wxMSW:

- Correct (harmless) warnings given for forward-declared DLL-exported classes
  by mingw32 4.2 (Tim Stahlhut).

wxGTK:

- Added gtk.window.force-background-colour wxSystemOptions option to work around
  a background colour bug in the gtk-qt theme under KDE.
- Implemented wxGetClientDisplayRect() correctly for wxGTK and X11-based ports.


2.8.6
-----

All:

- Fixed another bug in wxFileConfig when deleting entries (Axel Gembe)
- Added Portuguese translation (Antonio Cardoso Martins)


2.8.5
-----

All (GUI):

- Added colour normalization to PNM image handler (Ray Johnston)
- Fixed selecting part of word from right to left in wxHTML (Michael Hieke)
- Selecting text in wxHTML with character precision was made easier, it's
  enough to select half of a character (Michael Hieke)
- Significantly improved startup times of XRC-based applications using
  embedded resources on Unix (requires resources recompilation)
- Fixed freeing of "static" alpha data in wxImage (Axel Gembe)
- Don't invalidate the font in SetNativeFontInfo[Desc]() if the string is
  invalid, to conform to the documented behaviour (Langhammer)
- Fixed wxXPMHandler::SaveFile for images with more than 92 colors.

wxMSW:

- Correct problem with page setup dialog when using landscape mode
- Added msw.font.no-proof-quality system option, see manual for description
- Fix appearance of notebook with non-top tabs under Windows Vista